Updated planner page: moved the position of the entity info card from left of the entity to right. To address info card transparency issues over the calendar section,  I brought the sidbar to a layer above the calendar section. This means that tasks dragged from the calendar --> sidebar will not visible over the sidebar but this is a measured tradeoff for better infocard positioning.

--- a/f/src/c/plannerPage/plannerPage.css
+++ b/f/src/c/plannerPage/plannerPage.css
@@ -33,6 +33,7 @@ div.planner-side-bar{
     justify-content: flex-start;
     position: fixed;
     min-width: 400px;
+    z-index: 1;
 }
 
 div.planner-content{
@@ -46,4 +47,5 @@ div.planner-content{
     justify-content: flex-start;
     gap: 28px;
     align-content: flex-start;
+    z-index: 0;
 }
